tests/tooling/fixtures/native/execution/positive/while_break_continue_guarded.objc3
// Positive execution fixture: while-loop control with guarded continue and deterministic break.
module WhileBreakContinueGuarded;

fn main() -> i32 {
  while (1) {
    if (0) {
      continue;
    }
    break;
  }
  return 31;
}
