tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_in_return_type_extern.objc3
module MisplacedQualifierInReturnTypeExtern;

fn add(lhs: i32, rhs: i32) -> extern;

fn main() -> i32 {
  return 0;
}
